--- a/horizontal-nav-fullwidth/starter-kit.html
+++ b/horizontal-nav-fullwidth/starter-kit.html
@@ -32,63 +32,64 @@
 	</div>
 	<div id="main-wrapper">
 		<header class="topbar">
-			<nav class="navbar top-navbar navbar-expand-md navbar-dark">
-				<div class="navbar-collapse">
-					<ul class="navbar-nav mr-auto">
-						<!-- This is  -->
-						<li class="nav-item"> <a class="nav-link nav-toggler d-block d-sm-none waves-effect waves-dark" href="javascript:void(0)"><i class="ti-menu"></i></a> </li>
-						<li class="nav-item"> <a class="nav-link sidebartoggler d-none waves-effect waves-dark" href="javascript:void(0)"><i class="icon-menu"></i></a> </li>
-						<li class="nav-item">
-							<a href="tel:+912267549800" class="nav-link" target="_blank">
-								<i class="fa fa-phone"></i>Call us: +91 22 6754 9800
-							</a>
-						</li>
-						<li class="nav-item">
-							<a href="mailto:info@teamglobal.in" class="nav-link" target="_blank">
-								<i class="fa fa-envelope"></i>
-								Email: info@teamglobal.in
-							</a>
-						</li>
-					</ul>
+			<div class="container">
+				<nav class="navbar top-navbar navbar-expand-md navbar-dark">
+					<div class="navbar-collapse">
+						<ul class="navbar-nav mr-auto">
+							<!-- This is  -->
+							<li class="nav-item"> <a class="nav-link nav-toggler d-block d-sm-none waves-effect waves-dark" href="javascript:void(0)"><i class="ti-menu"></i></a> </li>
+							<li class="nav-item"> <a class="nav-link sidebartoggler d-none waves-effect waves-dark" href="javascript:void(0)"><i class="icon-menu"></i></a> </li>
+							<li class="nav-item">
+								<a href="tel:+912267549800" class="nav-link" target="_blank">
+									<i class="fa fa-phone"></i>Call us: +91 22 6754 9800
+								</a>
+							</li>
+							<li class="nav-item">
+								<a href="mailto:info@teamglobal.in" class="nav-link" target="_blank">
+									<i class="fa fa-envelope"></i>
+									Email: info@teamglobal.in
+								</a>
+							</li>
+						</ul>
 
-					<ul class="navbar-nav my-lg-0">
-						<li class="nav-item">
-							<a class="nav-link waves-effect waves-dark" href="" target="_blank" ria-haspopup="true" aria-expanded="false">
-									<span>
-										<i class="fa fa-facebook"></i>
+						<ul class="navbar-nav my-lg-0">
+							<li class="nav-item">
+								<a class="nav-link waves-effect waves-dark" href="" target="_blank" ria-haspopup="true" aria-expanded="false">
+										<span>
+											<i class="fa fa-facebook"></i>
+										</span>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link waves-effect waves-dark" href="" target="_blank" ria-haspopup="true" aria-expanded="false">
+										<span>
+											<i class="fa fa-youtube"></i>
+										</span>
+								</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link waves-effect waves-dark" href="" target="_blank" ria-haspopup="true" aria-expanded="false">
+									<span>	
+										<i class="fa fa-linkedin"></i>
 									</span>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link waves-effect waves-dark" href="" target="_blank" ria-haspopup="true" aria-expanded="false">
-									<span>
-										<i class="fa fa-youtube"></i>
-									</span>
-							</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link waves-effect waves-dark" href="" target="_blank" ria-haspopup="true" aria-expanded="false">
-								<span>	
-									<i class="fa fa-linkedin"></i>
-								</span>
-							</a>
-						</li>
-					</ul>
+								</a>
+							</li>
+						</ul>
 
-					<ul class="navbar-nav my-lg-0 navbar-nav--tg">
-						<li class="nav-item">
-							<a class="nav-link waves-effect waves-dark" href="" target="_blank" ria-haspopup="true" aria-expanded="false" id="lounge-button">
-								TG LOUNGE
-							</a>
-						</li>
-					</ul>
-				</div>
-			</nav>
+						<ul class="navbar-nav my-lg-0 navbar-nav--tg">
+							<li class="nav-item">
+								<a class="nav-link waves-effect waves-dark" href="" target="_blank" ria-haspopup="true" aria-expanded="false" id="lounge-button">
+									TG LOUNGE
+								</a>
+							</li>
+						</ul>
+					</div>
+				</nav>
+			</div>
 		</header>
 		<aside class="left-sidebar">
 			<!-- Sidebar scroll-->
-			<div class="scroll-sidebar">
-				<!-- Sidebar navigation-->
+			<div class="scroll-sidebar container">
 				<div class="navbar-header">
 					<a class="navbar-brand" href="starter-kit.html">
 						<img src="dist/images/TeamGlobal.png" alt="homepage" class="dark-logo" />
@@ -97,14 +98,7 @@
 				</div>
 				<nav class="sidebar-nav">
 					<ul id="sidebarnav" >
-						<li class="nav-small-cap">--- PERSONAL</li>
-						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="icon-speedometer"></i><span class="hide-menu">Dashboard <span class="badge badge-pill badge-cyan ml-auto">4</span></span></a>
-							<ul aria-expanded="false" class="collapse">
-								<li><a href="index.html">Minimal </a></li>
-								<li><a href="index2.html">Analytical</a></li>
-								<li><a href="index3.html">Demographical</a></li>
-								<li><a href="index4.html">Modern</a></li>
-							</ul>
+						<li> <a class="has-arrow waves-effect waves-dark" href="starter-kit.html" aria-expanded="false"><i class="icon-speedometer"></i><span class="hide-menu">Dashboard <span class="badge badge-pill badge-cyan ml-auto">4</span></span></a>
 						</li>
 						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-layout-grid2"></i><span class="hide-menu">Apps</span></a>
 							<ul aria-expanded="false" class="collapse">
@@ -153,7 +147,6 @@
 								<li><a href="ui-dragable-portlet.html">Dragable Portlet</a></li>
 							</ul>
 						</li>
-						<li class="nav-small-cap">--- FORMS, TABLE &amp; WIDGETS</li>
 						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-layout-media-right-alt"></i><span class="hide-menu">Forms</span></a>
 							<ul aria-expanded="false" class="collapse">
 								<li><a href="form-basic.html">Basic Forms</a></li>
@@ -195,93 +188,6 @@
 								<li><a href="widget-charts.html">Charts Widgets</a></li>
 							</ul>
 						</li>
-						<li class="nav-small-cap">--- EXTRA COMPONENTS</li>
-						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-files"></i><span class="hide-menu">Pages <span class="badge badge-pill badge-info">25</span></span></a>
-							<ul aria-expanded="false" class="collapse">
-								<li><a href="starter-kit.html">Starter Kit</a></li>
-								<li><a href="pages-blank.html">Blank page</a></li>
-								<li><a href="javascript:void(0)" class="has-arrow">Authentication <span class="badge badge-pill badge-success pull-right">6</span></a>
-									<ul aria-expanded="false" class="collapse">
-										<li><a href="pages-login.html">Login 1</a></li>
-										<li><a href="pages-login-2.html">Login 2</a></li>
-										<li><a href="pages-register.html">Register</a></li>
-										<li><a href="pages-register2.html">Register 2</a></li>
-										<li><a href="pages-register3.html">Register 3</a></li>
-										<li><a href="pages-lockscreen.html">Lockscreen</a></li>
-										<li><a href="pages-recover-password.html">Recover password</a></li>
-									</ul>
-								</li>
-								<li><a href="pages-profile.html">Profile page</a></li>
-								<li><a href="pages-animation.html">Animation</a></li>
-								<li><a href="pages-fix-innersidebar.html">Sticky Left sidebar</a></li>
-								<li><a href="pages-fix-inner-right-sidebar.html">Sticky Right sidebar</a></li>
-								<li><a href="pages-invoice.html">Invoice</a></li>
-								<li><a href="pages-treeview.html">Treeview</a></li>
-								<li><a href="pages-utility-classes.html">Helper Classes</a></li>
-								<li><a href="pages-search-result.html">Search result</a></li>
-								<li><a href="pages-scroll.html">Scrollbar</a></li>
-								<li><a href="pages-pricing.html">Pricing</a></li>
-								<li><a href="pages-lightbox-popup.html">Lighbox popup</a></li>
-								<li><a href="pages-gallery.html">Gallery</a></li>
-								<li><a href="pages-faq.html">Faqs</a></li>
-								<li><a href="javascript:void(0)" class="has-arrow">Error Pages</a>
-									<ul aria-expanded="false" class="collapse">
-										<li><a href="pages-error-400.html">400</a></li>
-										<li><a href="pages-error-403.html">403</a></li>
-										<li><a href="pages-error-404.html">404</a></li>
-										<li><a href="pages-error-500.html">500</a></li>
-										<li><a href="pages-error-503.html">503</a></li>
-									</ul>
-								</li>
-							</ul>
-						</li>
-						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-pie-chart"></i><span class="hide-menu">Extra</span></a>
-							<ul aria-expanded="false" class="collapse">
-								<li><a href="chart-morris.html">Morris Chart</a></li>
-								<li><a href="chart-chartist.html">Chartis Chart</a></li>
-								<li><a href="chart-echart.html">Echarts</a></li>
-								<li><a href="chart-flot.html">Flot Chart</a></li>
-								<li><a href="chart-knob.html">Knob Chart</a></li>
-								<li><a href="chart-chart-js.html">Chartjs</a></li>
-								<li><a href="chart-sparkline.html">Sparkline Chart</a></li>
-								<li><a href="chart-extra-chart.html">Extra chart</a></li>
-								<li><a href="chart-peity.html">Peity Charts</a></li>
-								<li>
-									<a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><span class="hide-menu">Icons</span></a>
-									<ul aria-expanded="false" class="collapse">
-										<li><a href="icon-material.html">Material Icons</a></li>
-										<li><a href="icon-fontawesome.html">Fontawesome Icons</a></li>
-										<li><a href="icon-themify.html">Themify Icons</a></li>
-										<li><a href="icon-weather.html">Weather Icons</a></li>
-										<li><a href="icon-simple-lineicon.html">Simple Line icons</a></li>
-										<li><a href="icon-flag.html">Flag Icons</a></li>
-									</ul>
-								</li>
-								<li>
-									<a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><span class="hide-menu">Maps</span></a>
-									<ul aria-expanded="false" class="collapse">
-										<li><a href="map-google.html">Google Maps</a></li>
-										<li><a href="map-vector.html">Vector Maps</a></li>
-									</ul>
-								</li>
-							</ul>
-						</li>
-						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-align-left"></i><span class="hide-menu">Multi</span></a>
-							<ul aria-expanded="false" class="collapse">
-								<li><a href="javascript:void(0)">item 1.1</a></li>
-								<li><a href="javascript:void(0)">item 1.2</a></li>
-								<li> <a class="has-arrow" href="javascript:void(0)" aria-expanded="false">Menu 1.3</a>
-									<ul aria-expanded="false" class="collapse">
-										<li><a href="javascript:void(0)">item 1.3.1</a></li>
-										<li><a href="javascript:void(0)">item 1.3.2</a></li>
-										<li><a href="javascript:void(0)">item 1.3.3</a></li>
-										<li><a href="javascript:void(0)">item 1.3.4</a></li>
-									</ul>
-								</li>
-								<li><a href="javascript:void(0)">item 1.4</a></li>
-							</ul>
-						</li>
-
 						<li class="tivaLogo"> 
 							<a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false">
 								<img src="dist/images/TivaLogo.png" alt="TivaLogo" class="img-fluid" />
