added footer and header

--- a/horizontal-nav-fullwidth/starter-kit.html
+++ b/horizontal-nav-fullwidth/starter-kit.html
@@ -37,8 +37,10 @@
 					<div class="navbar-collapse">
 						<ul class="navbar-nav mr-auto">
 							<!-- This is  -->
-							<li class="nav-item"> <a class="nav-link nav-toggler d-block d-sm-none waves-effect waves-dark" href="javascript:void(0)"><i class="ti-menu"></i></a> </li>
-							<li class="nav-item"> <a class="nav-link sidebartoggler d-none waves-effect waves-dark" href="javascript:void(0)"><i class="icon-menu"></i></a> </li>
+							<li class="nav-item"> <a class="nav-link nav-toggler d-block d-sm-none waves-effect waves-dark" href="javascript:void(0)"><i
+									 class="ti-menu"></i></a> </li>
+							<li class="nav-item"> <a class="nav-link sidebartoggler d-none waves-effect waves-dark" href="javascript:void(0)"><i
+									 class="icon-menu"></i></a> </li>
 							<li class="nav-item">
 								<a href="tel:+912267549800" class="nav-link" target="_blank">
 									<i class="fa fa-phone"></i>Call us: +91 22 6754 9800
@@ -55,21 +57,21 @@
 						<ul class="navbar-nav my-lg-0">
 							<li class="nav-item">
 								<a class="nav-link waves-effect waves-dark" href="" target="_blank" ria-haspopup="true" aria-expanded="false">
-										<span>
-											<i class="fa fa-facebook"></i>
-										</span>
+									<span>
+										<i class="fa fa-facebook"></i>
+									</span>
 								</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link waves-effect waves-dark" href="" target="_blank" ria-haspopup="true" aria-expanded="false">
-										<span>
-											<i class="fa fa-youtube"></i>
-										</span>
+									<span>
+										<i class="fa fa-youtube"></i>
+									</span>
 								</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link waves-effect waves-dark" href="" target="_blank" ria-haspopup="true" aria-expanded="false">
-									<span>	
+									<span>
 										<i class="fa fa-linkedin"></i>
 									</span>
 								</a>
@@ -78,7 +80,8 @@
 
 						<ul class="navbar-nav my-lg-0 navbar-nav--tg">
 							<li class="nav-item">
-								<a class="nav-link waves-effect waves-dark" href="" target="_blank" ria-haspopup="true" aria-expanded="false" id="lounge-button">
+								<a class="nav-link waves-effect waves-dark" href="" target="_blank" ria-haspopup="true" aria-expanded="false"
+								 id="lounge-button">
 									TG LOUNGE
 								</a>
 							</li>
@@ -97,10 +100,12 @@
 					</a>
 				</div>
 				<nav class="sidebar-nav">
-					<ul id="sidebarnav" >
-						<li> <a class="has-arrow waves-effect waves-dark" href="starter-kit.html" aria-expanded="false"><i class="icon-speedometer"></i><span class="hide-menu">Dashboard <span class="badge badge-pill badge-cyan ml-auto">4</span></span></a>
+					<ul id="sidebarnav">
+						<li> <a class="has-arrow waves-effect waves-dark" href="starter-kit.html" aria-expanded="false"><i class="icon-speedometer"></i><span
+								 class="hide-menu">Dashboard <span class="badge badge-pill badge-cyan ml-auto">4</span></span></a>
 						</li>
-						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-layout-grid2"></i><span class="hide-menu">Apps</span></a>
+						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-layout-grid2"></i><span
+								 class="hide-menu">Apps</span></a>
 							<ul aria-expanded="false" class="collapse">
 								<li><a href="app-calendar.html">Calendar</a></li>
 								<li><a href="app-chat.html">Chat app</a></li>
@@ -117,7 +122,8 @@
 								</li>
 							</ul>
 						</li>
-						<li> <a class="has-arrow waves-effect waves-dark two-column" href="javascript:void(0)" aria-expanded="false"><i class="ti-palette"></i><span class="hide-menu">Ui <span class="badge badge-pill badge-primary text-white ml-auto">25</span></span></a>
+						<li> <a class="has-arrow waves-effect waves-dark two-column" href="javascript:void(0)" aria-expanded="false"><i
+								 class="ti-palette"></i><span class="hide-menu">Ui <span class="badge badge-pill badge-primary text-white ml-auto">25</span></span></a>
 							<ul aria-expanded="false" class="collapse">
 								<li><a href="ui-cards.html">Cards</a></li>
 								<li><a href="ui-user-card.html">User Cards</a></li>
@@ -147,7 +153,8 @@
 								<li><a href="ui-dragable-portlet.html">Dragable Portlet</a></li>
 							</ul>
 						</li>
-						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-layout-media-right-alt"></i><span class="hide-menu">Forms</span></a>
+						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-layout-media-right-alt"></i><span
+								 class="hide-menu">Forms</span></a>
 							<ul aria-expanded="false" class="collapse">
 								<li><a href="form-basic.html">Basic Forms</a></li>
 								<li><a href="form-layout.html">Form Layouts</a></li>
@@ -169,7 +176,8 @@
 								<li><a href="form-tinymce.html">Tinymce Editor</a></li>
 							</ul>
 						</li>
-						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-layout-accordion-merged"></i><span class="hide-menu">Tables</span></a>
+						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-layout-accordion-merged"></i><span
+								 class="hide-menu">Tables</span></a>
 							<ul aria-expanded="false" class="collapse">
 								<li><a href="table-basic.html">Basic Tables</a></li>
 								<li><a href="table-layout.html">Table Layouts</a></li>
@@ -181,14 +189,15 @@
 								<li><a href="table-editable-table.html">Editable Table</a></li>
 							</ul>
 						</li>
-						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-settings"></i><span class="hide-menu">Widgets</span></a>
+						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-settings"></i><span
+								 class="hide-menu">Widgets</span></a>
 							<ul aria-expanded="false" class="collapse">
 								<li><a href="widget-data.html">Data Widgets</a></li>
 								<li><a href="widget-apps.html">Apps Widgets</a></li>
 								<li><a href="widget-charts.html">Charts Widgets</a></li>
 							</ul>
 						</li>
-						<li class="tivaLogo"> 
+						<li class="tivaLogo">
 							<a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false">
 								<img src="dist/images/TivaLogo.png" alt="TivaLogo" class="img-fluid" />
 							</a>
@@ -273,28 +282,36 @@
 							<ul class="m-t-20 chatonline">
 								<li><b>Chat option</b></li>
 								<li>
-									<a href="javascript:void(0)"><img src="../assets/images/users/1.jpg" alt="user-img" class="img-circle"> <span>Varun Dhavan <small class="text-success">online</small></span></a>
+									<a href="javascript:void(0)"><img src="../assets/images/users/1.jpg" alt="user-img" class="img-circle"> <span>Varun
+											Dhavan <small class="text-success">online</small></span></a>
 								</li>
 								<li>
-									<a href="javascript:void(0)"><img src="../assets/images/users/2.jpg" alt="user-img" class="img-circle"> <span>Genelia Deshmukh <small class="text-warning">Away</small></span></a>
+									<a href="javascript:void(0)"><img src="../assets/images/users/2.jpg" alt="user-img" class="img-circle"> <span>Genelia
+											Deshmukh <small class="text-warning">Away</small></span></a>
 								</li>
 								<li>
-									<a href="javascript:void(0)"><img src="../assets/images/users/3.jpg" alt="user-img" class="img-circle"> <span>Ritesh Deshmukh <small class="text-danger">Busy</small></span></a>
+									<a href="javascript:void(0)"><img src="../assets/images/users/3.jpg" alt="user-img" class="img-circle"> <span>Ritesh
+											Deshmukh <small class="text-danger">Busy</small></span></a>
 								</li>
 								<li>
-									<a href="javascript:void(0)"><img src="../assets/images/users/4.jpg" alt="user-img" class="img-circle"> <span>Arijit Sinh <small class="text-muted">Offline</small></span></a>
+									<a href="javascript:void(0)"><img src="../assets/images/users/4.jpg" alt="user-img" class="img-circle"> <span>Arijit
+											Sinh <small class="text-muted">Offline</small></span></a>
 								</li>
 								<li>
-									<a href="javascript:void(0)"><img src="../assets/images/users/5.jpg" alt="user-img" class="img-circle"> <span>Govinda Star <small class="text-success">online</small></span></a>
+									<a href="javascript:void(0)"><img src="../assets/images/users/5.jpg" alt="user-img" class="img-circle"> <span>Govinda
+											Star <small class="text-success">online</small></span></a>
 								</li>
 								<li>
-									<a href="javascript:void(0)"><img src="../assets/images/users/6.jpg" alt="user-img" class="img-circle"> <span>John Abraham<small class="text-success">online</small></span></a>
+									<a href="javascript:void(0)"><img src="../assets/images/users/6.jpg" alt="user-img" class="img-circle"> <span>John
+											Abraham<small class="text-success">online</small></span></a>
 								</li>
 								<li>
-									<a href="javascript:void(0)"><img src="../assets/images/users/7.jpg" alt="user-img" class="img-circle"> <span>Hritik Roshan<small class="text-success">online</small></span></a>
+									<a href="javascript:void(0)"><img src="../assets/images/users/7.jpg" alt="user-img" class="img-circle"> <span>Hritik
+											Roshan<small class="text-success">online</small></span></a>
 								</li>
 								<li>
-									<a href="javascript:void(0)"><img src="../assets/images/users/8.jpg" alt="user-img" class="img-circle"> <span>Pwandeep rajan <small class="text-success">online</small></span></a>
+									<a href="javascript:void(0)"><img src="../assets/images/users/8.jpg" alt="user-img" class="img-circle"> <span>Pwandeep
+											rajan <small class="text-success">online</small></span></a>
 								</li>
 							</ul>
 						</div>
@@ -314,8 +331,91 @@
 		<!-- ============================================================== -->
 		<!-- footer -->
 		<!-- ============================================================== -->
-		<footer class="footer">
-			© 2018 Eliteadmin by themedesigner.in
+		<footer class="fixed-bottom">
+			<div class="footer-wrapper">
+				<div class="container">
+					<div class="row">
+						<div class="col-md-4">
+							<div class="footer-widget">
+								<h6 class="widget-title">GET IN TOUCH</h6>
+								<ul class="footer-social-links">
+									<li>
+										<a href="tel:+01-562-867-5309">
+											<i class="fa fa-phone"></i>
+										</a>
+									</li>
+									<li>
+										<a href="mailto:info@teamglobal.in">
+											<i class="fa fa-envelope"></i>
+										</a>
+									</li>
+									<li>
+										<a href="https://www.facebook.com/teamglobal.in/" target="_blank">
+											<i class="fa fa-facebook-f"></i>
+										</a>
+									</li>
+									<li>
+										<a href="https://www.linkedin.com/in/teamgloballogistics/" target="_blank">
+											<i class="fa fa-linkedin"></i>
+										</a>
+									</li>
+									<li>
+										<a href="https://www.youtube.com/channel/UCkpQr8hp3puz6qwO2h5SWHA" target="_blank">
+											<i class="fa fa-youtube"></i>
+										</a>
+									</li>
+									<li>
+										<a href="" target="_blank">
+											<i class="fa fa-download"></i>
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="footer-widget">
+								<h6 class="widget-title">GROUP COMPANIES</h6>
+								<ul class="footer-links">
+									<li>
+										<a href="http://globiconterminals.com/" target="_blank">Globicon Terminals</a>
+									</li>
+									<li>
+										<a href="http://batcocfs.com" target="_blank">BatcoCFS</a>
+									</li>
+									<li>
+										<a href="http://teamworld.in" target="_blank">TeamWorld</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+						<div class="col-md-4">
+							<div class="footer-widget">
+								<h6 class="widget-title">MEMBERS OF</h6>
+								<ul class="footer-links">
+									<li>
+										<a href="http://globiconterminals.com/" target="_blank">
+											<img src="dist/images/footer/WWA.png" alt="" class="img-fluid">
+										</a>
+									</li>
+									<li>
+										<a href="http://batcocfs.com" target="_blank">
+											<img src="dist/images/footer/GPLN.png" alt="" class="img-fluid">
+										</a>
+									</li>
+									<li>
+										<a href="http://teamworld.in" target="_blank">
+											<img src="dist/images/footer/ACG.png" alt="" class="img-fluid">
+										</a>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="footer-copyright">
+				<p class="copyright-text text-center">Teamglobal Logistics Pvt. Ltd. &copy; 2018 - All rights reserved.</p>
+			</div>
 		</footer>
 		<!-- ============================================================== -->
 		<!-- End footer -->
