--- a/horizontal-nav-fullwidth/starter-kit.html
+++ b/horizontal-nav-fullwidth/starter-kit.html
@@ -46,7 +46,7 @@
 									<i class="fa fa-phone"></i>Call us: +91 22 6754 9800
 								</a>
 							</li>
-							<li class="nav-item">
+							<li class="nav-item left--navBorder">
 								<a href="mailto:info@teamglobal.in" class="nav-link" target="_blank">
 									<i class="fa fa-envelope"></i>
 									Email: info@teamglobal.in
