--- a/horizontal-nav-fullwidth/starter-kit.html
+++ b/horizontal-nav-fullwidth/starter-kit.html
@@ -35,7 +35,7 @@
 			<div class="container">
 				<nav class="navbar top-navbar navbar-expand-md navbar-dark">
 					<div class="navbar-collapse">
-						<ul class="navbar-nav mr-auto">
+						<ul class="navbar-nav mr-auto add-details">
 							<!-- This is  -->
 							<li class="nav-item"> <a class="nav-link nav-toggler d-block d-sm-none waves-effect waves-dark" href="javascript:void(0)"><i
 									 class="ti-menu"></i></a> </li>
@@ -43,34 +43,35 @@
 									 class="icon-menu"></i></a> </li>
 							<li class="nav-item">
 								<a href="tel:+912267549800" class="nav-link" target="_blank">
-									<i class="fa fa-phone"></i>Call us: +91 22 6754 9800
+									<i class="fa fa-phone"></i>
+									<span>Call us: +91 22 6754 9800</span>
 								</a>
 							</li>
 							<li class="nav-item left--navBorder">
 								<a href="mailto:info@teamglobal.in" class="nav-link" target="_blank">
 									<i class="fa fa-envelope"></i>
-									Email: info@teamglobal.in
+									<span>Email: info@teamglobal.in</span>
 								</a>
 							</li>
 						</ul>
 
 						<ul class="navbar-nav my-lg-0">
 							<li class="nav-item">
-								<a class="nav-link waves-effect waves-dark" href="" target="_blank" ria-haspopup="true" aria-expanded="false">
+								<a class="nav-link waves-effect waves-dark" href="https://www.facebook.com/teamglobal.in/" target="_blank" ria-haspopup="true" aria-expanded="false">
 									<span>
 										<i class="fa fa-facebook"></i>
 									</span>
 								</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link waves-effect waves-dark" href="" target="_blank" ria-haspopup="true" aria-expanded="false">
+								<a class="nav-link waves-effect waves-dark" href="https://www.youtube.com/channel/UCkpQr8hp3puz6qwO2h5SWHA" target="_blank" ria-haspopup="true" aria-expanded="false">
 									<span>
 										<i class="fa fa-youtube"></i>
 									</span>
 								</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link waves-effect waves-dark" href="" target="_blank" ria-haspopup="true" aria-expanded="false">
+								<a class="nav-link waves-effect waves-dark" href="https://www.linkedin.com/in/teamgloballogistics/" target="_blank" ria-haspopup="true" aria-expanded="false">
 									<span>
 										<i class="fa fa-linkedin"></i>
 									</span>
@@ -95,110 +96,63 @@
 			<div class="scroll-sidebar container">
 				<div class="navbar-header">
 					<a class="navbar-brand" href="starter-kit.html">
-						<img src="dist/images/TeamGlobal.png" alt="homepage" class="dark-logo" />
-						<img src="dist/images/TeamGlobal.png" alt="homepage" class="light-logo" />
+						<img src="dist/images/TeamGlobal.png" alt="homepage" />
 					</a>
 				</div>
 				<nav class="sidebar-nav">
 					<ul id="sidebarnav">
-						<li> <a class="has-arrow waves-effect waves-dark" href="starter-kit.html" aria-expanded="false"><i class="icon-speedometer"></i><span
+						<li> <a class="waves-effect waves-dark" href="starter-kit.html" aria-expanded="false"><i class="icon-speedometer"></i><span
 								 class="hide-menu">Dashboard <span class="badge badge-pill badge-cyan ml-auto">4</span></span></a>
 						</li>
 						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-layout-grid2"></i><span
 								 class="hide-menu">Apps</span></a>
 							<ul aria-expanded="false" class="collapse">
 								<li><a href="app-calendar.html">Calendar</a></li>
-								<li><a href="app-chat.html">Chat app</a></li>
-								<li><a href="app-ticket.html">Support Ticket</a></li>
-								<li><a href="app-contact.html">Contact / Employee</a></li>
-								<li><a href="app-contact2.html">Contact Grid</a></li>
-								<li><a href="app-contact-detail.html">Contact Detail</a></li>
-								<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><span class="hide-menu">Inbox</span></a>
-									<ul aria-expanded="false" class="collapse">
-										<li><a href="app-email.html">Mailbox</a></li>
-										<li><a href="app-email-detail.html">Mailbox Detail</a></li>
-										<li><a href="app-compose.html">Compose Mail</a></li>
-									</ul>
-								</li>
 							</ul>
 						</li>
 						<li> <a class="has-arrow waves-effect waves-dark two-column" href="javascript:void(0)" aria-expanded="false"><i
 								 class="ti-palette"></i><span class="hide-menu">Ui <span class="badge badge-pill badge-primary text-white ml-auto">25</span></span></a>
 							<ul aria-expanded="false" class="collapse">
-								<li><a href="ui-cards.html">Cards</a></li>
-								<li><a href="ui-user-card.html">User Cards</a></li>
+								<li><a href="ui-bootstrap.html">Bootstrap Ui</a></li>
 								<li><a href="ui-buttons.html">Buttons</a></li>
 								<li><a href="ui-modals.html">Modals</a></li>
-								<li><a href="ui-tab.html">Tab</a></li>
-								<li><a href="ui-tooltip-popover.html">Tooltip &amp; Popover</a></li>
-								<li><a href="ui-tooltip-stylish.html">Tooltip stylish</a></li>
-								<li><a href="ui-sweetalert.html">Sweet Alert</a></li>
 								<li><a href="ui-notification.html">Notification</a></li>
 								<li><a href="ui-progressbar.html">Progressbar</a></li>
-								<li><a href="ui-nestable.html">Nestable</a></li>
-								<li><a href="ui-range-slider.html">Range slider</a></li>
-								<li><a href="ui-timeline.html">Timeline</a></li>
+								<li><a href="ui-sweetalert.html">Sweet Alert</a></li>
+								<li><a href="ui-tab.html">Tab</a></li>
 								<li><a href="ui-typography.html">Typography</a></li>
-								<li><a href="ui-horizontal-timeline.html">Horizontal Timeline</a></li>
-								<li><a href="ui-session-timeout.html">Session Timeout</a></li>
-								<li><a href="ui-session-ideal-timeout.html">Session Ideal Timeout</a></li>
-								<li><a href="ui-bootstrap.html">Bootstrap Ui</a></li>
-								<li><a href="ui-breadcrumb.html">Breadcrumb</a></li>
-								<li><a href="ui-bootstrap-switch.html">Bootstrap Switch</a></li>
-								<li><a href="ui-list-media.html">List Media</a></li>
-								<li><a href="ui-ribbons.html">Ribbons</a></li>
-								<li><a href="ui-grid.html">Grid</a></li>
-								<li><a href="ui-carousel.html">Carousel</a></li>
-								<li><a href="ui-date-paginator.html">Date-paginator</a></li>
-								<li><a href="ui-dragable-portlet.html">Dragable Portlet</a></li>
 							</ul>
 						</li>
 						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-layout-media-right-alt"></i><span
 								 class="hide-menu">Forms</span></a>
 							<ul aria-expanded="false" class="collapse">
 								<li><a href="form-basic.html">Basic Forms</a></li>
-								<li><a href="form-layout.html">Form Layouts</a></li>
 								<li><a href="form-addons.html">Form Addons</a></li>
-								<li><a href="form-material.html">Form Material</a></li>
-								<li><a href="form-float-input.html">Floating Lable</a></li>
 								<li><a href="form-pickers.html">Form Pickers</a></li>
 								<li><a href="form-upload.html">File Upload</a></li>
-								<li><a href="form-mask.html">Form Mask</a></li>
-								<li><a href="form-validation.html">Form Validation</a></li>
-								<li><a href="form-dropzone.html">File Dropzone</a></li>
-								<li><a href="form-icheck.html">Icheck control</a></li>
-								<li><a href="form-img-cropper.html">Image Cropper</a></li>
-								<li><a href="form-bootstrapwysihtml5.html">HTML5 Editor</a></li>
-								<li><a href="form-typehead.html">Form Typehead</a></li>
 								<li><a href="form-wizard.html">Form Wizard</a></li>
-								<li><a href="form-xeditable.html">Xeditable Editor</a></li>
-								<li><a href="form-summernote.html">Summernote Editor</a></li>
-								<li><a href="form-tinymce.html">Tinymce Editor</a></li>
 							</ul>
 						</li>
 						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-layout-accordion-merged"></i><span
 								 class="hide-menu">Tables</span></a>
 							<ul aria-expanded="false" class="collapse">
-								<li><a href="table-basic.html">Basic Tables</a></li>
-								<li><a href="table-layout.html">Table Layouts</a></li>
 								<li><a href="table-data-table.html">Data Tables</a></li>
-								<li><a href="table-footable.html">Footable</a></li>
-								<li><a href="table-jsgrid.html">Js Grid Table</a></li>
-								<li><a href="table-responsive.html">Responsive Table</a></li>
-								<li><a href="table-bootstrap.html">Bootstrap Tables</a></li>
-								<li><a href="table-editable-table.html">Editable Table</a></li>
 							</ul>
 						</li>
 						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-settings"></i><span
 								 class="hide-menu">Widgets</span></a>
 							<ul aria-expanded="false" class="collapse">
-								<li><a href="widget-data.html">Data Widgets</a></li>
-								<li><a href="widget-apps.html">Apps Widgets</a></li>
-								<li><a href="widget-charts.html">Charts Widgets</a></li>
+								<li><a href="chart-chart-js.html">charts Widgets</a></li>
 							</ul>
 						</li>
+						<li> <a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false"><i class="ti-files"></i><span
+							class="hide-menu">Pages</span></a>
+					 <ul aria-expanded="false" class="collapse">
+							<li><a href="pages-invoice.html">Invoice</a></li>
+					 </ul>
+				 </li>
 						<li class="tivaLogo">
-							<a class="has-arrow waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false">
+							<a class="waves-effect waves-dark" href="javascript:void(0)" aria-expanded="false">
 								<img src="dist/images/TivaLogo.png" alt="TivaLogo" class="img-fluid" />
 							</a>
 						</li>
@@ -247,7 +201,8 @@
 					<div class="col-12">
 						<div class="card">
 							<div class="card-body">
-								This is some text within a card block.
+								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum accusamus recusandae debitis eos, numquam enim mollitia eligendi, labore odio provident, beatae suscipit. Repellat non, impedit aspernatur eaque et provident eligendi.</p>
+								<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum accusamus recusandae debitis eos, numquam enim mollitia eligendi, labore odio provident, beatae suscipit. Repellat non, impedit aspernatur eaque et provident eligendi.</p>
 							</div>
 						</div>
 					</div>
@@ -331,7 +286,7 @@
 		<!-- ============================================================== -->
 		<!-- footer -->
 		<!-- ============================================================== -->
-		<footer class="fixed-bottom">
+		<footer>
 			<div class="footer-wrapper">
 				<div class="container">
 					<div class="row">
